Make index page responsive and behave close to the original. Overflow when opening signup form still needs to be fixed.

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,25 +1,21 @@
-html, body{
-  height: 100%;
-}
 body{
   margin: 0;
-  overflow: hidden;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
+  min-height: 100vh;
+  overflow-x: hidden;
 }
 #loc{
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-areas: 'a b';
-  height: 100%;
+  min-height: inherit;
 }
 #loc > div:nth-child(1){
   position: relative;
-  grid-area: a;
 }
 #loc > div:nth-child(1) > img:nth-child(1){
   height: 100%;
   width: 100%;
   object-fit: cover;
+  vertical-align:top;
 }
 #loc > div:nth-child(1) > img:nth-child(2){
   position: absolute;
@@ -28,14 +24,13 @@ body{
   transform: translate(-50%,-50%);
 }
 #loc > div:nth-child(2){
-  grid-area: b;
-  padding-left: 30px;
-  padding-top: 30px;
+  padding: 30px;
 }
 #header-1{
   margin-top: 60px;
   font-size: 60px;
   font-weight: bold;
+  white-space: nowrap;
 }
 #header-2{
   margin-top: 60px;
@@ -107,7 +102,7 @@ a{
   background-color: white;
   color: black;
   border-radius: 15px;
-  visibility: collapse;
+  display: none;
 }
 
 #grayout-div{
@@ -118,11 +113,10 @@ a{
   height: 100%;
   background-color: black;
   opacity: 0.5;
-  visibility: collapse;
+  display: none;
 }
 
 #signup-pup{
-  display: flex;
   flex-direction: column;
 }
 
@@ -237,7 +231,6 @@ a{
   padding: 20px 10px 0 5px;
   box-sizing: border-box;
   font-size: 18px; 
-  
 }
 
 .dynamic-select > label{
@@ -273,4 +266,45 @@ a{
 
 #pup-footer > button:hover{
   background-color: rgb(26,140,216);
+}
+
+@media screen and (min-width: 1000px) {
+  #loc{
+    grid-template-columns: 1fr 1fr;
+    grid-template-areas: 'a b';
+  }
+  #img-div{
+    grid-area: a;
+  }
+  #form-div{
+    grid-area: b;
+  }
+}
+
+@media screen and (max-width: 1000px){
+  #loc{
+    grid-template-rows: 1fr 300px;
+    grid-template-areas: 'a' 'b';
+  }
+  #form-div{
+    grid-area: a;
+  }
+  #img-div{
+    grid-area: b;
+  }
+}
+
+@media screen and (min-width: 600px){
+  #form-div > p{
+    font-size: 50px;
+  }
+}
+
+@media screen and (max-width: 600px){
+  #header-1{
+    font-size: 35px;
+  }
+  #header-2{
+    font-size: 20px;
+  }
 }
